--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Harrison, NJ</p>
+								<p>Jersey City, NJ</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
