--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Jersey City, NJ</p>
+								<p>Mumbai, MH</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(862) 389-7906</a></p>
+								<p><a href="#">9820173906</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">muskan.chowatia@rutgers.edu</a></p>
+								<p><a href="#">chowatiamuskan07@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
